2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	More restyling.
	* src/ucommand.cc,
	* src/ucommandqueue.cc,
	* src/uexpression.cc,
	* src/uobj.cc,
	* src/uvalue.cc,
	* src/uvar.cc,
	* src/uvariablename.cc: Restyle. Formatting changes. Some potentially
	  dangerous default cases were removed. If they were intended, rewrite
	  them as:
	  default: /* skip */
	    break;
	  Meanwhile we have more compiler warnings about cases not handled in
	  switch.

2006-12-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Restyle.
	* src/ucommand.cc,
	* src/ucommandqueue.cc,
	* src/uconnection.cc,
	* src/ueventhandler.cc,
	* src/ueventmatch.cc,
	* src/uexpression.cc,
	* src/ugroup.cc,
	* src/uobj.cc,
	* src/uobject.cc,
	* src/uqueue.cc,
	* src/uvalue.cc,
	* src/uvar.cc,
	* src/uvariable.cc,
	* src/uvariablename.cc,
	* src/uvariablename.hh: Here. Formating changes.

2006-12-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	This should have been done much sooner...
	change 'inherit' to 'inherits' 
	* src/parser/bison/ugrammar.y: done.
	* src/parser/bison/utoken.l: done.

2006-12-25  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	change email notification to kernel1@gostai.com 
	* vcs/local.rb: done.

2006-12-25  Akim Demaille  <akim.demaille@free.fr>

	Factor handling of tags in the grammar
	* src/parser/bison/ugrammar.y (tag): New.

2006-12-25  Akim Demaille  <akim.demaille@free.fr>

	Factor the handling of flags
	I'd really appreciate if someone could add tests on the use
	of flags...
	* src/parser/bison/ugrammar.y (flags, flags.0.1): Remove.
	(flag, flags.0, flags.1): New.

2006-12-25  Akim Demaille  <akim.demaille@free.fr>

	Rule permutation
	* src/parser/bison/ugrammar.y: Highlight the similarity bw rules
	using flags.

2006-12-25  Akim Demaille  <akim.demaille@free.fr>

	Simplifications
	* src/uexpression.hh (UExpression::Type): Remove the EXPR_ prefix.
	Adjust all uses.
	(UExpression::UExpression): Remove the ctor that takes an ufloat*,