@@ -399,11 +399,13 @@ root:
        especially the end-of-lines, to keep error messages in sync. */
   error
   {
+    // FIXME: We should probably free it.
     up.commandTree = 0;
   }
 
   | refvariable "=" binary ";" {
 
+      // FIXME: A pointer to a ref-pointer?  Sounds absurd.
       libport::RefPt<UBinary> *ref = new libport::RefPt<UBinary>($3);
       memcheck(up, ref);
       UCommand* tmpcmd = new UCommand_ASSIGN_BINARY(@$, $1, ref);
@@ -414,7 +416,7 @@ root:
 	up.binaryCommand = true;
 
       up.commandTree  = new UCommand_TREE(@$, USEMICOLON, tmpcmd, 0);
-      if ( up.commandTree )
+      if (up.commandTree)
 	up.commandTree->setTag("__node__");
       memcheck(up, up.commandTree);
     }
@@ -422,7 +424,7 @@ root:
   | taggedcommands {
 
       up.commandTree = 0;
-      if ($1 && $1->type == UCommand::CMD_TREE)
+      if ($1 && $1->type == UCommand::TREE)
       {
 	up.commandTree = dynamic_cast<UCommand_TREE*> ($1);
 	assert (up.commandTree != 0);
@@ -644,23 +646,22 @@ instruction:
       memcheck(up, $$, $1, $4, $6);
     }
 
-
   | "group" "identifier" "{" identifiers "}" {
 
-    $$ = new UCommand_GROUP(@$, $2, $4);
+      $$ = new UCommand_GROUP(@$, $2, $4);
       memcheck(up, $$, $4, $2);
     }
 
   | "addgroup" "identifier" "{" identifiers "}" {
 
-    $$ = new UCommand_GROUP(@$, $2, $4, 1);
+      $$ = new UCommand_GROUP(@$, $2, $4, 1);
       memcheck(up, $$, $4, $2);
     }
 
 
   | "delgroup" "identifier" "{" identifiers "}" {
 
-    $$ = new UCommand_GROUP(@$, $2, $4, 2);
+      $$ = new UCommand_GROUP(@$, $2, $4, 2);
       memcheck(up, $$, $4, $2);
     }
 
@@ -720,31 +721,12 @@ instruction:
       memcheck(up, $$, $1);
     }
 
-  | OPERATOR_ID "identifier" {
+  | OPERATOR_ID tag {
 
       memcheck(up, $1);
       memcheck(up, $2);
       $$ = new UCommand_OPERATOR_ID(@$, $1, $2);
       memcheck(up, $$, $1, $2);
-    }
-
-  | OPERATOR_ID TAG {
-
-      memcheck(up, $1);
-      memcheck(up, $2);
-      $$ = new UCommand_OPERATOR_ID(@$, $1, $2);
-      memcheck(up, $$, $1, $2);
-    }
-
-  | OPERATOR_ID STRUCT {
-
-      memcheck(up, $1);
-      memcheck(up, $2.device);
-      memcheck(up, $2.id);
-      $$ = new UCommand_OPERATOR_ID(@$, $1, new UString($2.device, $2.id));
-      delete $2.device;
-      delete $2.id;
-      memcheck(up, $$, $1);
     }
 
   | OPERATOR_VAR variable {
@@ -835,25 +817,25 @@ instruction:
 
   | "waituntil" softtest {
 
-    $$ = new UCommand_WAIT_TEST(@$, $2);
+      $$ = new UCommand_WAIT_TEST(@$, $2);
       memcheck(up, $$, $2);
     }
 
-  | refvariable TOK_MINUSMINUS {
+  | refvariable "--" {
 
-    $$ = new UCommand_INCDECREMENT(@$, UCommand::CMD_DECREMENT, $1);
+      $$ = new UCommand_INCDECREMENT(@$, UCommand::DECREMENT, $1);
       memcheck(up, $$, $1);
     }
 
-  | refvariable TOK_PLUSPLUS {
+  | refvariable "++" {
 
-    $$ = new UCommand_INCDECREMENT(@$, UCommand::CMD_INCREMENT, $1);
+      $$ = new UCommand_INCDECREMENT(@$, UCommand::INCREMENT, $1);
       memcheck(up, $$, $1);
     }
 
-  | TOK_DEF {
+  | "def" {
 
-    $$ = new UCommand_DEF(@$, UDEF_QUERY, 0, 0, 0);
+      $$ = new UCommand_DEF(@$, UDEF_QUERY, 0, 0, 0);
       memcheck(up, $$)
     }
 
@@ -864,7 +846,7 @@ instruction:
       memcheck(up, $$, $2)
     }
 
-  | TOK_DEF refvariable {
+  | "def" refvariable {
 
       $2->local_scope = true;
       $$ = new UCommand_DEF(@$, UDEF_VAR, $2, 0, 0);
@@ -877,13 +859,13 @@ instruction:
       memcheck(up, $$, $3)
     }
 
-  | TOK_CLASS "identifier" "{" class_declaration_list "}" {
+  | "class" "identifier" "{" class_declaration_list "}" {
 
     $$ = new UCommand_CLASS(@$, $2, $4);
       memcheck(up, $$, $2, $4)
     }
 
-  | TOK_CLASS "identifier" {
+  | "class" "identifier" {
 
     $$ = new UCommand_CLASS(@$, $2, 0);
       memcheck(up, $$, $2)
@@ -938,7 +920,7 @@ instruction:
       }
     }
 
-  | TOK_DEF variable "(" identifiers ")" {
+  | "def" variable "(" identifiers ")" {
 
       up.connection.server->debug("Warning: 'def' is deprecated, use"
 				       "'function' instead\n");
@@ -972,7 +954,7 @@ instruction:
       }
     }
 
-  | TOK_IF "(" expr ")" taggedcommand %prec CMDBLOCK {
+  | "if" "(" expr ")" taggedcommand %prec CMDBLOCK {
 
       if (!$5)
       {
@@ -999,7 +981,7 @@ instruction:
       memcheck(up, $$, $3, $5, $7);
     }
 
-  | TOK_EVERY "(" expr ")" taggedcommand {
+  | "every" "(" expr ")" taggedcommand {
 
     $$ = new UCommand_EVERY(@$, $3, $5);
       memcheck(up, $$, $3, $5);
@@ -1017,7 +999,7 @@ instruction:
       memcheck(up, $$, $3, $5);
     }
 
-  | TOK_FREEZEIF "(" softtest ")" taggedcommand {
+  | "freezeif" "(" softtest ")" taggedcommand {
 
     $$ = new UCommand_FREEZEIF(@$, $3, $5);
       memcheck(up, $$, $3, $5);
@@ -1025,7 +1007,7 @@ instruction:
 
   | "at" "(" softtest ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_AT(@$, UCommand::CMD_AT, $3, $5, 0);
+    $$ = new UCommand_AT(@$, UCommand::AT, $3, $5, 0);
       memcheck(up, $$, $3, $5);
     }
 
@@ -1038,13 +1020,13 @@ instruction:
 	error(@$, "Empty body within an at command.");
 	YYERROR;
       }
-      $$ = new UCommand_AT(@$, UCommand::CMD_AT, $3, $5, $7);
+      $$ = new UCommand_AT(@$, UCommand::AT, $3, $5, $7);
       memcheck(up, $$, $3, $5, $7);
     }
 
   | "at" "&" "(" softtest ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_AT(@$, UCommand::CMD_AT_AND, $4, $6, 0);
+    $$ = new UCommand_AT(@$, UCommand::AT_AND, $4, $6, 0);
       memcheck(up, $$, $4, $6);
     }
 
@@ -1057,19 +1039,19 @@ instruction:
 	error(@$, "Empty body within an at command.");
 	YYERROR;
       }
-      $$ = new UCommand_AT(@$, UCommand::CMD_AT_AND, $4, $6, $8);
+      $$ = new UCommand_AT(@$, UCommand::AT_AND, $4, $6, $8);
       memcheck(up, $$, $4, $6, $8);
     }
 
   | "while" "(" expr ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_WHILE(@$, UCommand::CMD_WHILE, $3, $5);
+    $$ = new UCommand_WHILE(@$, UCommand::WHILE, $3, $5);
       memcheck(up, $$, $3, $5);
     }
 
   | "while" "|" "(" expr ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_WHILE(@$, UCommand::CMD_WHILE_PIPE, $4, $6);
+    $$ = new UCommand_WHILE(@$, UCommand::WHILE_PIPE, $4, $6);
       memcheck(up, $$, $4, $6);
     }
 
@@ -1100,37 +1082,37 @@ instruction:
 
   | "foreach" purevariable "in" expr "{" taggedcommands "}" %prec CMDBLOCK {
 
-    $$ = new UCommand_FOREACH(@$, UCommand::CMD_FOREACH, $2, $4, $6);
+    $$ = new UCommand_FOREACH(@$, UCommand::FOREACH, $2, $4, $6);
       memcheck(up, $$, $2, $4, $6);
     }
 
   | "foreach" "&" purevariable "in" expr "{" taggedcommands "}" %prec CMDBLOCK {
 
-    $$ = new UCommand_FOREACH(@$, UCommand::CMD_FOREACH_AND, $3, $5, $7);
+    $$ = new UCommand_FOREACH(@$, UCommand::FOREACH_AND, $3, $5, $7);
       memcheck(up, $$, $3, $5, $7);
     }
 
   | "foreach" "|" purevariable "in" expr "{" taggedcommands "}" %prec CMDBLOCK {
 
-    $$ = new UCommand_FOREACH(@$, UCommand::CMD_FOREACH_PIPE, $3, $5, $7);
+    $$ = new UCommand_FOREACH(@$, UCommand::FOREACH_PIPE, $3, $5, $7);
       memcheck(up, $$, $3, $5, $7);
     }
 
   | "loopn" "(" expr ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_LOOPN(@$, UCommand::CMD_LOOPN, $3, $5);
+    $$ = new UCommand_LOOPN(@$, UCommand::LOOPN, $3, $5);
       memcheck(up, $$, $3, $5);
     }
 
   | "loopn" "|" "(" expr ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_LOOPN(@$, UCommand::CMD_LOOPN_PIPE, $4, $6);
+    $$ = new UCommand_LOOPN(@$, UCommand::LOOPN_PIPE, $4, $6);
       memcheck(up, $$, $4, $6);
     }
 
   | "loopn" "&" "(" expr ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_LOOPN(@$, UCommand::CMD_LOOPN_AND, $4, $6);
+    $$ = new UCommand_LOOPN(@$, UCommand::LOOPN_AND, $4, $6);
       memcheck(up, $$, $4, $6);
     }
 
@@ -1138,7 +1120,7 @@ instruction:
 	       expr ";"
 	       instruction ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_FOR(@$, UCommand::CMD_FOR, $3, $5, $7, $9);
+    $$ = new UCommand_FOR(@$, UCommand::FOR, $3, $5, $7, $9);
       memcheck(up, $$, $3, $5, $7, $9);
     }
 
@@ -1146,7 +1128,7 @@ instruction:
 		    expr ";"
 		    instruction ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_FOR(@$, UCommand::CMD_FOR_PIPE, $4, $6, $8, $10);
+    $$ = new UCommand_FOR(@$, UCommand::FOR_PIPE, $4, $6, $8, $10);
       memcheck(up, $$, $4, $6, $8, $10);
     }
 
@@ -1154,7 +1136,7 @@ instruction:
 		   expr ";"
 		   instruction ")" taggedcommand %prec CMDBLOCK {
 
-    $$ = new UCommand_FOR(@$, UCommand::CMD_FOR_AND, $4, $6, $8, $10);
+    $$ = new UCommand_FOR(@$, UCommand::FOR_AND, $4, $6, $8, $10);
       memcheck(up, $$, $4, $6, $8, $10);
     }
 ;
