@@ -47,48 +47,48 @@ public:
   /// The different types for a UCommand
   enum Type
   {
-    CMD_GENERIC,
-    CMD_TREE,
-    CMD_ASSIGN_VALUE,
-    CMD_ASSIGN_PROPERTY,
-    CMD_ASSIGN_BINARY,
-    CMD_EXPR,
-    CMD_RETURN,
-    CMD_ECHO,
-    CMD_NEW,
-    CMD_ALIAS,
-    CMD_INHERIT,
-    CMD_GROUP,
-    CMD_WAIT,
-    CMD_WAIT_TEST,
-    CMD_INCREMENT,
-    CMD_DECREMENT,
-    CMD_DEF,
-    CMD_CLASS,
-    CMD_IF,
-    CMD_EVERY,
-    CMD_TIMEOUT,
-    CMD_STOPIF,
-    CMD_FREEZEIF,
-    CMD_AT,
-    CMD_AT_AND,
-    CMD_WHILE,
-    CMD_WHILE_AND,
-    CMD_WHILE_PIPE,
-    CMD_WHENEVER,
-    CMD_LOOP,
-    CMD_LOOPN,
-    CMD_LOOPN_PIPE,
-    CMD_LOOPN_AND,
-    CMD_FOREACH,
-    CMD_FOREACH_PIPE,
-    CMD_FOREACH_AND,
-    CMD_FOR,
-    CMD_FOR_PIPE,
-    CMD_FOR_AND,
-    CMD_NOOP,
-    CMD_EMIT,
-    CMD_LOAD,
+    GENERIC,
+    TREE,
+    ASSIGN_VALUE,
+    ASSIGN_PROPERTY,
+    ASSIGN_BINARY,
+    EXPR,
+    RETURN,
+    ECHO,
+    NEW,
+    ALIAS,
+    INHERIT,
+    GROUP,
+    WAIT,
+    WAIT_TEST,
+    INCREMENT,
+    DECREMENT,
+    DEF,
+    CLASS,
+    IF,
+    EVERY,
+    TIMEOUT,
+    STOPIF,
+    FREEZEIF,
+    AT,
+    AT_AND,
+    WHILE,
+    WHILE_AND,
+    WHILE_PIPE,
+    WHENEVER,
+    LOOP,
+    LOOPN,
+    LOOPN_PIPE,
+    LOOPN_AND,
+    FOREACH,
+    FOREACH_PIPE,
+    FOREACH_AND,
+    FOR,
+    FOR_PIPE,
+    FOR_AND,
+    NOOP,
+    EMIT,
+    LOAD,
   };
 
   UCommand (const location& l, Type _type);
