@@ -1,3 +1,11 @@
+2006-12-26  Akim Demaille  <akim.demaille@free.fr>
+
+	s/CMD_//
+	* src/ucommand.hh (Type): Remove the CMD_ prefix.
+	Adjust all uses.
+
+	* src/parser/bison/ugrammar.y: More "tag" uses.
+
 2006-12-26  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>
 
 	More restyling.
